# j3Launcher

./: README.md
src/: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.txt  about.txt  app.manifest  app.rc  build.rs  build_release.py  j3Launcher.json
src/docs/: domain.md  linux-parity-report.md  menu-audit-2026-06-18.md  release-readiness.md
src/src/: error.rs  lib.rs  main.rs
src/src/app/: actions.rs  button_layout.rs  config_service.rs  folder_tabs.rs  mod.rs  tab_actions.rs
src/src/domain/: button.rs  config.rs  metadata.rs  mod.rs  scan.rs  settings.rs  tab.rs
src/src/infra/: config.rs  config_store.rs  desktop_entry.rs  folder_scan.rs  mod.rs
src/src/platform/: mod.rs
src/src/platform/windows/: clipboard.rs  dialogs.rs  dpi.rs  dwm.rs  icon.rs  input.rs  mod.rs  shell.rs  wide.rs
src/src/ui/: common.rs  mod.rs
src/src/ui/gtk4/: mod.rs
src/src/ui/win32/: button_drag.rs  geometry.rs  mod.rs  native.rs  scan_worker.rs
src/tests/: linux_ui_smoke.sh  windows_ui_smoke.ps1
src/tests/fixtures/: j3Launcher_win.json
