[package]
name = "j3launcher"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Windows native Rust port of j3Launcher."
readme = "README.md"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { package = "gtk4", version = "0.10.2" }

[target.'cfg(not(windows))'.dependencies]
fs2 = "0.4.3"

[build-dependencies]
embed-resource = "3.0.9"
